--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.31.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.12.0",
     "react-toastify": "^9.0.1",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
