--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "chalk-animation": "^2.0.2",
     "daisyui": "^2.15.0",
     "firebase": "^9.8.1",
+    "framer-motion": "^6.3.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
@@ -22,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.12.0",
+    "react-ticker": "^1.3.2",
     "react-toastify": "^9.0.1",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
